--- a/index.html
+++ b/index.html
@@ -2,10 +2,61 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+    <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Budget App | CaauuZ</title>
 </head>
 <body>
     
+    <div class="wrapper">
+        <div class="container">
+            <div class="sub-container">
+                <div class="total-amount-container">
+                    <h3>Budget</h3>
+                    <p class="hide error" id="budget-error">
+                        O valor não pode ser vazio ou negativo!
+                    </p>
+                    <input type="number" id="total-amount" placeholder="Insira o Valor Total">
+                    <button class="submit" id="total-amount-button">Definir Orçamento</button>
+                </div>
+
+                <div class="user-amount-container">
+                    <h3>Despezas</h3>
+                    <p class="hide error" id="product-title-error">
+                        Os valores não podem ficar vazios!
+                    </p>
+                    <input type="text" class="product-title" id="product-title" placeholder="Insira o Nome do Produto">
+                    <input type="number" id="user-amount" placeholder="Insira o Custo do Produto">
+                    <button class="submit" id="check-amount">Calcular Despeza</button>
+                </div>
+            </div>
+
+            <div class="output-container flex-space">
+                <div>
+                    <p>Orçamento Total</p>
+                    <span id="amount">0</span>
+                </div>
+                <div>
+                    <p>Despezas</p>
+                    <span id="expenditure-amount">0</span>
+                </div>
+                <div>
+                    <p>Slado</p>
+                    <span id="balance-amount">0</span>
+                </div>
+            </div>
+        </div>
+
+        <div class="list">
+            <h3>Lista de Despezas</h3>
+            <div class="list-container" id="list">
+                
+            </div>
+        </div>
+
+    </div>
+
+    <script src="index.js"></script>
 </body>
 </html>
