--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <title>Budget App | CaauuZ</title>
 </head>
 <body>
-    
     <div class="wrapper">
         <div class="container">
             <div class="sub-container">
@@ -39,7 +38,7 @@
                 </div>
                 <div>
                     <p>Despezas</p>
-                    <span id="expenditure-amount">0</span>
+                    <span id="expenditure-value">0</span>
                 </div>
                 <div>
                     <p>Slado</p>
@@ -50,13 +49,9 @@
 
         <div class="list">
             <h3>Lista de Despezas</h3>
-            <div class="list-container" id="list">
-                
-            </div>
+            <div class="list-container" id="list"></div>
         </div>
-
     </div>
-
     <script src="index.js"></script>
 </body>
 </html>
